<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_settings"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        style="@style/SearchDayNightStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >

        <TextView
            style="@style/SearchDayNightStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textSize="@dimen/txt_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:textSize="16sp"
            android:id="@+id/themeSwitcher"
            android:text="@string/black_theme"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="2dp"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/shareButton">

        <TextView
            style="@style/SettingsScreenTextStyle"
            android:text="@string/share_app" />


        <Button
            style="@style/SettingsScreenButtonStyle"
            app:icon="@drawable/ic_share" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/supportButton">

        <TextView
            style="@style/SettingsScreenTextStyle"
            android:text="@string/message_to_support"/>


        <Button
            style="@style/SettingsScreenButtonStyle"
            app:icon="@drawable/ic_support" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/termsButton">

        <TextView
            style="@style/SettingsScreenTextStyle"
            android:text="@string/terms_of_agreement" />


        <Button
            style="@style/SettingsScreenButtonStyle"
            app:icon="@drawable/ic_terms"/>
    </LinearLayout>



</LinearLayout>