<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/playlist_maker"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size" />
    </FrameLayout>

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/main_button_margin_top"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black_200"
        android:textStyle="bold"
        android:letterSpacing="0"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black_200"
        app:cornerRadius="16dp" />


    <Button
        android:id="@+id/button_media"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media"
        android:textColor="@color/black_200"
        android:textStyle="bold"
        android:letterSpacing="0"
        app:icon="@drawable/ic_media"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black_200"
        app:cornerRadius="16dp" />
    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/black_200"
        android:textStyle="bold"
        android:letterSpacing="0"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black_200"
        app:cornerRadius="16dp" />


</LinearLayout>