<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".music.MediaActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/media_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/media_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline_for_texts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/mp_text_border" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline_for_texts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/mp_text_border" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.475" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.645" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline_lesser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline_for_texts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.790" />

    <ImageButton
        android:id="@+id/music_back_btn"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        app:layout_constraintEnd_toStartOf="@+id/left_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <ImageView
        android:id="@+id/mp_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/center_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline" />

    <TextView
        android:id="@+id/mp_trackName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/media_margin"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/app_name"
        android:textColor="@color/mp_value_text_color"
        android:textSize="22sp"
        app:layout_constrainedWidth="true"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/center_guideline" />

    <TextView
        android:id="@+id/mp_artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/mp_value_text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/mp_trackName" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="mp_add_btn,mp_play_btn,mp_fav_btn"
        app:flow_horizontalStyle="spread_inside"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/bottom_guideline"

        />

    <ImageButton
        android:id="@+id/mp_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_mp_add" />

    <ImageButton
        android:id="@+id/mp_play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_mp_play" />

    <ImageButton
        android:id="@+id/mp_fav_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_mp_liked" />

    <TextView
        android:id="@+id/mp_current_track_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/temp_track_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_guideline_lesser" />

    <TextView
        android:id="@+id/track_duration_text"
        style="@style/MpTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/track_duration"
        app:layout_constraintStart_toStartOf="@id/left_guideline_for_texts"
        app:layout_constraintTop_toBottomOf="@id/bottom_guideline_for_texts" />

    <TextView
        android:id="@+id/collection_duration_text"
        style="@style/MpTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_alb"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/left_guideline_for_texts"
        app:layout_constraintTop_toBottomOf="@id/track_duration_text" />

    <TextView
        android:id="@+id/track_release_date_text"
        style="@style/MpTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_release"
        app:layout_constraintStart_toStartOf="@id/left_guideline_for_texts"
        app:layout_constraintTop_toBottomOf="@id/collection_duration_text"
        app:layout_goneMarginTop="8dp" />

    <TextView
        android:id="@+id/track_primary_genre_name_text"
        style="@style/MpTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_gen"
        app:layout_constraintStart_toStartOf="@id/left_guideline_for_texts"
        app:layout_constraintTop_toBottomOf="@id/track_release_date_text" />

    <TextView
        android:id="@+id/track_country_text"
        style="@style/MpTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_country"
        app:layout_constraintStart_toStartOf="@id/left_guideline_for_texts"
        app:layout_constraintTop_toBottomOf="@id/track_primary_genre_name_text" />

    <TextView
        android:id="@+id/track_duration_value"
        style="@style/MpTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_duration"
        android:textColor="@color/mp_value_text_color"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_for_texts"
        app:layout_constraintTop_toBottomOf="@id/bottom_guideline_for_texts" />

    <TextView
        android:id="@+id/collection_duration_value"
        style="@style/MpTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_alb"
        android:textColor="@color/mp_value_text_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_for_texts"
        app:layout_constraintTop_toBottomOf="@id/track_duration_text"

        />

    <TextView
        android:id="@+id/track_release_date_value"
        style="@style/MpTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_release"
        android:textColor="@color/mp_value_text_color"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_for_texts"
        app:layout_constraintTop_toBottomOf="@id/collection_duration_text"
        app:layout_goneMarginTop="8dp" />

    <TextView
        android:id="@+id/track_primary_genre_name_value"
        style="@style/MpTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_gen"
        android:textColor="@color/mp_value_text_color"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_for_texts"
        app:layout_constraintTop_toBottomOf="@id/track_release_date_text" />

    <TextView
        android:id="@+id/track_country_value"
        style="@style/MpTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_country"
        android:textColor="@color/mp_value_text_color"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_for_texts"
        app:layout_constraintTop_toBottomOf="@id/track_primary_genre_name_text" />

</androidx.constraintlayout.widget.ConstraintLayout>